--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node src/app.js",
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [
@@ -17,6 +17,7 @@
   "description": "This is tinder for developers",
   "dependencies": {
     "express": "^4.21.2",
-    "install": "^0.13.0"
+    "install": "^0.13.0",
+    "mongoose": "^8.9.3"
   }
 }
