--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "install": "^0.13.0",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "validator": "^13.12.0"
   }
 }
