--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "validator": "^13.12.0"
   }
