--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "postcss": "^8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
