--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
+    "razorpay": "^2.9.5",
     "validator": "^13.12.0"
   }
 }
