--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "razorpay": "^2.9.5",
+    "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   }
 }
